cite/test/tests/ui/footnote-fail/missing_reason.stderr
error: Citation requires documentation (annotation-footnote feature enabled) but no reason provided. Add a 'reason = "..."' attribute or disable the annotation-footnote feature
 --> tests/ui/footnote-fail/missing_reason.rs:5:1
  |
5 | #[cite(mock, same = "content")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
